--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,15 +3,17 @@ name: Test
 
 on: [push]
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
-  test:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-      - uses: actions-rs/cargo@v1
-        with:
-          command: test
+    - uses: actions/checkout@v3
+    - name: Build
+      run: cargo build --verbose
+    - name: Run tests
+      run: cargo test --verbose
