--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -9,6 +9,14 @@ edition = "2021"
 async-stream = "0.3.5"
 futures-util = "0.3.29"
 num-traits = "0.2.17"
+opentelemetry = "0.21.0"
+opentelemetry-jaeger = "0.20.0"
+opentelemetry-semantic-conventions = "0.13.0"
+opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
+opentelemetry_sdk = "0.21.1"
 tempfile = "3.8.1"
-tokio = {version="1.34.0", features=["full"]}
+tokio = { version = "1.34.0", features = ["full"] }
 tokio-stream = "0.1.14"
+tracing = "0.1.40"
+tracing-opentelemetry = "0.22.0"
+tracing-subscriber = { version = "0.3.18", features = ["registry"] }
