--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 async-stream = "0.3.5"
 futures-util = "0.3.29"
+num-derive = "0.4.1"
 num-traits = "0.2.17"
 opentelemetry = "0.21.0"
 opentelemetry-jaeger = "0.20.0"
@@ -20,3 +21,4 @@ tokio-stream = "0.1.14"
 tracing = "0.1.40"
 tracing-opentelemetry = "0.22.0"
 tracing-subscriber = { version = "0.3.18", features = ["registry"] }
+uuid = { version = "1.6.1", features = ["v4"] }
